# pydantic-cloud-settings

./: .gitignore  LICENSE.txt  requirements.txt  setup.cfg  setup.py
pydantic_cloud/: __init__.py  gcp.py
