[metadata]
name = pydantic-cloud-settings
version = 0.0.2
author = Kedar Deore
author_email = mixedquantum@gmail.com
description = Use cloud secrets (GCP Secret Manager) with pydantic settings
url = https://github.com/0xKD/pydantic-cloud-settings
project_urls =
    Bug Tracker = https://github.com/0xKD/pydantic-cloud-settings/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
license_files = LICENSE.txt

[options]
packages = find:
python_requires = >=3.6,<4
